<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2D30"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4EE2FB"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_aspecto_externo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aspecto_externo"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/content_aspecto_externo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto_aspecto"
                    android:layout_marginTop="8dp"
                    android:fontFamily="casual"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_branquias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_de_las_branquias"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/content_branquias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto_color_branquias"
                    android:layout_marginTop="8dp"
                    android:fontFamily="casual"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_olor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/olor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/content_olor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto_olor"
                    android:layout_marginTop="8dp"
                    android:fontFamily="casual"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_textura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textura"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/content_textura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto_textura"
                    android:layout_marginTop="8dp"
                    android:fontFamily="casual"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/title_color_carne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_de_la_carne"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/content_color_carne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Texto_color_carne"
                    android:layout_marginTop="8dp"
                    android:fontFamily="casual"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/pescado_fresco_fisico"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/pescado_fresco" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="casual"
                    android:text="@string/Texto_pescado_fresco_fisico"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/pescado_deficiente_fisico"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/pescado_con_deficiencia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="casual"
                    android:text="@string/Texto_pescado_deficiencia_fisico"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
